@@ -2,7 +2,11 @@
 
 MAKEINFO = makeinfo --no-validate
 
+SWIG = swig
+
 LDADD=	@LIBOBJS@
+
+cftp_LDADD = $(LDADD) $(SCRIPTING_OBJS)
 
 bin_PROGRAMS=	cftp
 info_TEXINFOS=	cftp.texi
@@ -12,7 +16,8 @@ cftp_SOURCES=	directory.c display.c readdir.c loop.c functions.c \
 		ftp.c sockets.c main.c options.c keys.c tty.c rc.c readrc.c \
 		list.c tag.c util.c version.c bindings.c status.c signals.c \
 		fntable.c fn_basic.c fn_scroll.c fn_select.c fn_tag.c \
-		fn_bind.c fn_guile.c
+		fn_bind.c
+EXTRA_cftp_SOURCES=fn_guile.c scripting_guile.c
 noinst_HEADERS= directory.h display.h readdir.h loop.h functions.h tag.h \
 		ftp.h sockets.h options.h keys.h tty.h rc.h fntable.h util.h \
 		getopt.h list.h bindings.h status.h signals.h \
@@ -28,7 +33,8 @@ EXTRA_DIST=	bindings.desc fntable.c.proto fntable.h.proto \
 
 # extra rules
 
-BUILT_SOURCES=	options.h options.c fntable.h fntable.c bindings.c
+BUILT_SOURCES=	options.h options.c fntable.h fntable.c bindings.c \
+		scripting_guile.c
 
 functions.texi : fntable.fn mkfntexi.m4
 	m4 $(srcdir)/mkfntexi.m4 $(srcdir)/fntable.fn >> functions.texi-unsort
@@ -63,3 +69,10 @@ options.h: options.op mkoptab-h.m4
 
 getdomainname.o: getdomainname.c
 	$(CC) $(CFLAGS) -DDOMAINNAME=\"@DOMAINNAME@\" -c getdomainname.c
+
+scripting_guile.c: scripting.i display.h
+	$(SWIG) -o scripting_guile_raw.c scripting.i
+	awk -f swig-guile.awk < scripting_guile_raw.c > scripting_guile.c \
+		|| rm scripting_guile.c
+
+#cftp: scripting_guile.o # XXX: why doesn't automake realize this?!
