@@ -1,0 +1,4 @@
+%module scripting
+
+%include "display.h"
+%include "ftp.h"
